--- a/app/src/main/res/layout/fragment_cell_info.xml
+++ b/app/src/main/res/layout/fragment_cell_info.xml
@@ -159,4 +159,10 @@
             android:id="@+id/mnc_textview"
             android:text="-1" />
     </TableRow>
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </TableLayout>
