--- a/app/src/main/res/layout/activity_cell.xml
+++ b/app/src/main/res/layout/activity_cell.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CellActivity">
+    tools:context=".cell.CellActivity">
 
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
