--- a/app/src/main/res/layout/activity_wifi.xml
+++ b/app/src/main/res/layout/activity_wifi.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".WifiActivity"
+    tools:context=".wifi.WifiActivity"
     android:id="@+id/wifi_info_fragment_container">
 
     <ListView
