--- a/app/src/main/res/layout/fragment_cells_map.xml
+++ b/app/src/main/res/layout/fragment_cells_map.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-
-    <TextView
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/cells_mapview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tab 3"
-        android:id="@+id/textView2"
-        android:textAlignment="center"
-        android:layout_gravity="center_vertical"
-        android:textIsSelectable="false"
-        android:textSize="30dp"
-        android:paddingLeft="150dp"/>
-
+        android:layout_height="match_parent" />
 
 </LinearLayout>
