--- a/app/src/main/res/layout/fragment_neighbor_cells.xml
+++ b/app/src/main/res/layout/fragment_neighbor_cells.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".cell.CellActivity">
 
-    <TextView
+    <ListView
+        android:clickable="true"
+        android:id="@+id/neighbor_cells_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tab 2"
-        android:id="@+id/textView2"
-        android:textAlignment="center"
-        android:layout_gravity="center_vertical"
-        android:textIsSelectable="false"
-        android:textSize="30dp"
-        android:paddingLeft="150dp"/>
-
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 </LinearLayout>
