--- a/app/src/main/res/layout/fragment_neighbour_cells.xml
+++ b/app/src/main/res/layout/fragment_neighbour_cells.xml
@@ -6,7 +6,7 @@
 
     <ListView
         android:clickable="true"
-        android:id="@+id/neighbor_cells_list"
+        android:id="@+id/neighbour_cells_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
